force-app/main/default/objects/Account/fields/Active_Business_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Active_Business_Addresses__c</fullName>
    <label>Active Business Addresses</label>
    <summaryFilterItems>
        <field>Business_Address__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Business_Address__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>