force-app/main/default/objects/Account/fields/Total_Business_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Total_Business_Addresses__c</fullName>
    <label>Total Business Addresses</label>
    <summaryForeignKey>Business_Address__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>