force-app/main/default/objects/Account/validationRules/Annual_Revenue_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Annual_Revenue_Check</fullName>
    <active>false</active>
    <errorConditionFormula>( AnnualRevenue  &gt; 100000000000) ||  AnnualRevenue &lt;0</errorConditionFormula>
    <errorDisplayField>AnnualRevenue</errorDisplayField>
    <errorMessage>Annuel Revenue cannot exceed 100 billion</errorMessage>
</ValidationRule>